--- a/SolarNFT/Info.plist
+++ b/SolarNFT/Info.plist
@@ -7,6 +7,8 @@
 		<string>Audiowide-Regular.ttf</string>
 		<string>Roboto-Regular.ttf</string>
 		<string>Roboto-Medium.ttf</string>
+		<string>Exo2-Regular.ttf</string>
+		<string>Roboto-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
